lab1/Test/L1-A-6-71.output
Error Type B at Line 1
Error Type B at Line 6
Error Type A at Line 9
Error Type B at Line 10
